--- a/2025-09-25/agnessa/frontend/.gitignore
+++ b/2025-09-25/agnessa/frontend/.gitignore
@@ -1,24 +1,14 @@
-# Logs
-logs
+node_modules/
+dist/
+dist-ssr/
+.vite/
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+.env*
 
-node_modules
-dist
-dist-ssr
-*.local
+frontend/node_modules/
+frontend/dist/
+frontend/.vite/
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+**/.vite/
+**/.cache/
+**/.parcel-cache/
